Fix horizontal scrolling issue

--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -17,6 +17,8 @@ body {
 
   display: flex;
   flex-direction: column;
+
+  overflow-x: hidden;
 }
 
 p {
